# syspro-cpp

./: 1.cpp  11.cpp  13.cpp  2.cpp  5.cpp  6.cpp  8.cpp  CMakeLists.txt
7/: CMakeLists.txt  factorial.vrisc
7/include/: Add.h  Div.h  Jmp.h  Jmpz.h  Load.h  Mov.h  Mul.h  Store.h  Sub.h  emulator.h
7/src/: Add.cpp  Div.cpp  Jmp.cpp  Jmpz.cpp  Load.cpp  Mov.cpp  Mul.cpp  Store.cpp  Sub.cpp  emulator.cpp  main.cpp
